# drf-toolkit

./: .codeclimate.yml  .coveragerc  .gitignore  .pylintrc  404.html  Makefile  README.md  caching.html  contributing.html  development.html  fields.html  filters.html  index.html  installation.html  mkdocs.yml  models.html  pagination.html  pyproject.toml  quick_start.html  requirements.html  serializers.html  setup.cfg  signals.html  sitemap.xml  storage.html  testing.html  views.html
.github/workflows/: docs.yml  main.yaml  publish.yaml  release.yaml  updater.yaml
docs/: CNAME  caching.md  contributing.md  development.md  fields.md  filters.md  index.md  installation.md  models.md  pagination.md  quick_start.md  requirements.md  serializers.md  signals.md  storage.md  testing.md  views.md
docs/models/: availability.md  base.md  combinations.md  diff.md  file.md  index.md  inheritance.md  ordered.md  soft_delete.md
drf_kit/: __init__.py  cache.py  exceptions.py  fields.py  filters.py  managers.py  models.py  pagination.py  serializers.py  settings.py  signals.py  storage.py  tests.py
drf_kit/managers/: __init__.py  availability_managers.py  soft_delete_managers.py
drf_kit/models/: __init__.py  availability_models.py  base_models.py  diff_models.py  file_models.py  inheritance_models.py  ordered_models.py  soft_delete_models.py
drf_kit/pagination/: __init__.py  light_pagination.py
drf_kit/views/: __init__.py  nested_viewsets.py  single_nested_viewsets.py  stats_views.py  viewsets.py
drf_toolkit/: __init__.py  cache.py  fields.py  filters.py  managers.py  models.py  pagination.py  serializers.py  signals.py  storage.py
drf_toolkit/views/: __init__.py  nested_viewsets.py  single_nested_viewsets.py  stats_views.py  viewsets.py
models/: availability.html  base.html  combinations.html  diff.html  file.html  index.html  inheritance.html  ordered.html  soft_delete.html
search/: search_index.json
test_app/: apps.py  database_routers.py  filters.py  manage.py  managers.py  models.py  serializers.py  settings.py  signals.py  storage.py  tasks.py  urls.py  views.py
test_app/migrations/: 0001_initial.py  0002_auto_20220118_1400.py  0002_wizard_coordinates.py  0003_patronus_memory_alter_patronus_color.py  0004_newspaper_roomofrequirement_and_more.py  0004_roomofrequirement_and_more.py  0005_article_article_test_app_ar_updated_d2ab7e_idx_and_more.py  0006_news_exclusivenews_exclusivearticle_and_more.py  0007_beast_beast_test_app_be_updated_682cc9_idx_and_more.py  0008_beastowner_beastownership_beastowner_beasts_and_more.py  0009_beastcategory_beast_category.py  0010_exclusivearticle_slug_alter_beast_category.py  0011_trainingpitch_reservation_and_more.py  0012_beast_is_active.py  0013_wizard_minimum_age.py
test_app/tests/: tests_base.py  tests_filter.py  tests_formatter.py  tests_model.py  tests_serializer.py  tests_signals.py  tests_test_helpers.py
test_app/tests/factories/: article_factories.py  beast_category_factories.py  beast_factories.py  beast_owner_factories.py  beast_ownership_factories.py  house_factories.py  memory_factories.py  news_factories.py  newsaper_factories.py  patronus_factories.py  room_of_requirement_factories.py  spell_cast_factories.py  spell_factories.py  tale_factories.py  teacher_factories.py  training_pitch_factories.py  tri_wizard_placement_factories.py  wand_factories.py  wizard_factories.py
test_app/tests/tests_models/: tests_availability_models.py  tests_diff_models.py  tests_multi_models.py  tests_ordered_models.py  tests_slugify_field.py  tests_soft_delete_availability_models.py  tests_soft_delete_inheritance_models.py  tests_soft_delete_models.py  tests_storage_models.py
test_app/tests/tests_views/: test_bulk_views.py  test_stats_views.py  tests_bulk_views.py  tests_cached_views.py  tests_content_type_views.py  tests_crud_views.py  tests_filter_views.py  tests_many_to_many_views.py  tests_nested_views.py  tests_non_destructive_views.py  tests_paginated_views.py  tests_read_only_views.py  tests_single_nested_views.py  tests_stats_views.py  tests_upsert_views.py  tests_very_custom_views.py  tests_write_only_nested_views.py  tests_write_only_views.py
