[project]
name = "drf-kit"
version = "1.46.0"
description = "DRF Toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1",
    "django-filter>=24",
    "django-ordered-model<3.7.2",
    "djangorestframework>=3.15",
    "drf-extensions>=0.7",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.1",
    "freezegun>=1.5.1",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.9.0",
    "pytest-random-order>=1.1.1",
    "pytest-rerunfailures>=15.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.8.2",
    "safety>=3.2.11",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["RUF", "I", "PL", "F", "COM", "UP", "DJ", "T10", "T20", "DTZ", "SIM", "TID", "PTH", "ERA", "TRY"]
ignore = ["COM812", "PLR2004", "PLR0911", "PLR0913", "PLR0915", "DJ001", "DJ001", "DJ008", "TRY003", "PLR0912", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"settings.py" = ["F403", "F404", "F405"]

[tool.ruff.lint.isort]
known-first-party = ["test_app", "drf_kit"]


[tool.pytest.ini_options]
addopts = "-n auto --reruns 1 --random-order --cov"
python_files = ["tests_*.py"]
DJANGO_SETTINGS_MODULE = "test_app.settings"
pythonpath = [".", "test_app", "drf_kit"]

[tool.coverage.run]
branch = true
source = ["drf_kit"]
omit = ["*/manage.py", "*/settings.py", "*/wsgi.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["drf_kit"]

[tool.uv]
package = false
